# lets-build-gpt-tokenizer

./: README.md  pyproject.toml
notebooks/: byte-pair-encoding.ipynb
