[tool.poetry]
name = "lets-build-gpt-tokenizer"
version = "0.1.0"
description = ""
authors = ["jlondonobo <j.londonobo@gmail.com>"]
readme = "README.md"
packages = [{include = "lets_build_gpt_tokenizer"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
